<resources>
    <string name="app_name">Restaurant Reviewer</string>
    <string name="title_restaurants">Restaurants</string>
    <string name="title_settings">Settings</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="type">Type</string>
    <string name="copyright">© 2020 Jan Nejezchleba \n All Rights Reserved</string>
    <string name="app_version">App version</string>
    <string name="restaurants_reviews">Restaurants reviews</string>
    <string name="food_reviews">Food reviews</string>
    <string name="favourite_restaurant">Favourite restaurant</string>
    <string name="order">Order:</string>
    <string name="order_by">Order by:</string>
    <string name="info">Info</string>
    <string name="restaurant">Restaurant</string>
    <string name="price">Price</string>
    <string name="order_date">Order date</string>
    <string name="note">Note</string>
    <string name="rate">Rate</string>
    <string name="food">Food</string>
    <string name="personnel">Personnel</string>
    <string name="atmosphere">Atmosphere</string>
    <string name="add_restaurant">Add restaurant</string>
    <string name="ratings">Ratings</string>
    <string name="rating">Rating</string>
    <string name="edit_food">Edit food</string>
    <string name="picture_of_food">Picture of food</string>
    <string name="delete_restaurant">Delete restaurant</string>
    <string name="add_food">Add food</string>
    <string name="restaurant_picture">Restaurant picture</string>
    <string name="delete_food">Delete food</string>
    <string name="confirm_edit">Confirm edit</string>
    <string name="list_options">List options</string>
    <string name="detail_food">Detail food</string>
    <string name="unknown">Unknown</string>
    <string name="cafe">Cafe</string>
    <string name="fast_food">Fast food restaurant</string>
    <string name="pub">Pub</string>
    <string name="sweet_shop">Sweet-shop</string>
    <string name="bistro">Bistro</string>
    <string name="date">Date</string>
    <string name="confirm">Confirm</string>
    <string name="restaurant_delete">Delete this restaurant?</string>
    <string name="restaurant_delete_message">This action will delete all associated food.</string>
    <string name="food_delete">Delete this food?</string>
    <string name="restaurant_delete_title">Delete restaurant</string>
    <string name="food_edit">EDIT FOOD</string>
    <string name="food_detail">FOOD DETAIL</string>
    <string name="food_add">ADD FOOD</string>
    <string name="restaurant_list">RESTAURANT</string>
    <string name="restaurant_detail">RESTAURANT DETAIL</string>
    <string name="restaurant_edit">EDIT RESTAURANT</string>
    <string name="restaurant_add">ADD RESTAURANT</string>
    <string name="title_food">FOOD</string>
    <string name="about">ABOUT</string>
    <string name="cancel">Cancel</string>
    <string name="toast_empty_name">Empty name!</string>
    <string name="euro" translatable="false">€</string>
    <string name="dollar" translatable="false">$</string>
    <string name="czech_crown" translatable="false">Kč</string>
    <string name="group_by">Group by:</string>
    <string name="filter_value">Filter value:</string>
    <string name="list_order">List order</string>
    <string name="filter_by">Filter by:</string>
    <string name="filter">Filter</string>
    <string name="filter_none">None</string>
    <string name="filter_restaurant">Restaurant</string>
    <string name="filter_rating_less">Rating lower</string>
    <string name="filter_rating_more">Rating higher</string>
    <string name="statistics">Statistics</string>
    <string name="export_import_reviews">Export/Import reviews</string>
    <string name="export">Export</string>
    <string name="import_text">Import</string>
    <string name="about_menu">About</string>
</resources>