<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_gray"
    android:fitsSystemWindows="true"
    tools:context=".ui.restaurants.ListOptionsRestaurantDialog">

    <Button
        android:id="@+id/button_back"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_item"
        android:text="Back"
        app:layout_constraintBottom_toTopOf="@+id/label_list_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_list_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/list_order"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/layout_orderby"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <LinearLayout
        android:id="@+id/layout_orderby"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:weightSum="2"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_list_order">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group_by"
            android:textSize="20sp">

        </TextView>

        <Spinner
            android:id="@+id/spinner_group_by"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:theme="@style/MySpinnerStyle"/>
    </LinearLayout>

    <!--<LinearLayout
        android:id="@+id/layout_order"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_orderby"
        android:layout_margin="20dp"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_by"
            android:textSize="20sp"
            android:layout_weight="1">

        </TextView>
        <Spinner
            android:id="@+id/spinner_order"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:theme="@style/MySpinnerStyle">
        </Spinner>
    </LinearLayout>-->

    <TextView
        android:id="@+id/label_list_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/filter"
        android:textSize="35sp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_orderby">

    </TextView>

    <LinearLayout
        android:id="@+id/layout_filter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/label_list_filter"
        android:layout_margin="20dp"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by"
            android:textSize="20sp"
            android:layout_weight="1">

        </TextView>
        <Spinner
            android:id="@+id/spinner_filter"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:theme="@style/MySpinnerStyle">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_filter_value"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/layout_filter"
        android:layout_margin="20dp"
        android:weightSum="3"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_value"
            android:textSize="20sp"
            android:layout_weight="1">

        </TextView>

        <EditText
            android:id="@+id/filter_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="2"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:visibility="gone">
        </EditText>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_filter_rate_food"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible">


            <EditText
                android:id="@+id/filter_value_rating"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="50"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </EditText>

            <ImageButton
                android:id="@+id/button_rate_up"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:backgroundTint="@color/dark_gray"
                android:contentDescription="@string/rate"
                android:src="@drawable/ic_arrow_up"
                app:layout_constraintStart_toEndOf="@+id/filter_value_rating"
                app:layout_constraintTop_toTopOf="parent">

            </ImageButton>

            <ImageButton
                android:id="@+id/button_rate_down"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:backgroundTint="@color/dark_gray"
                android:contentDescription="@string/rate"
                android:src="@drawable/ic_arrow_down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/filter_value_rating"
                app:layout_constraintTop_toBottomOf="@+id/button_rate_up">

            </ImageButton>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_apply"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="Apply" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>